workhorse/gitops/addons/kube-prometheus-stack/dev/ingress-grafana.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-server
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: workhorse-ca
spec:
  tls:
    - hosts:
        - grafana.dev.local
      secretName: grafana-dev
  ingressClassName: nginx
  rules:
  - host: grafana.dev.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-grafana
            port:
              number: 9090
